k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubequeue-api
  namespace: kubequeue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubequeue-api
  template:
    metadata:
      labels:
        app: kubequeue-api
    spec:
      containers:
        - name: api
          image: kubequeue_api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
